force-app/main/default/objects/Contact/fields/Expert_Status__c.field-meta.xml
<CustomField>
    <fullName>Expert_Status__c</fullName>
    <label>Expert Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Considering</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>