force-app/main/default/objects/Contact/fields/Industry_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Industry_Expertise__c</fullName>
    <label>Sector Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>