force-app/main/default/objects/Contact/fields/last_touch_point_due__c.field-meta.xml
<CustomField>
    <fullName>last_touch_point_due__c</fullName>
    <formula>IF(AND(ISPICKVAL(Tier__c , &apos;1&apos;), (TODAY()- Last_Touch_Point__c &gt;90)) ,TRUE, IF(AND(ISPICKVAL(Tier__c , &apos;2&apos;), (TODAY()- Last_Touch_Point__c &gt;120)),TRUE, IF(AND(ISPICKVAL(Tier__c , &apos;3&apos;), (TODAY()- Last_Touch_Point__c &gt;180)), TRUE, FALSE)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>last touch point due</label>
    <type>Checkbox</type>
</CustomField>