force-app/main/default/objects/Contact/fields/Next_Touchpoint_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Touchpoint_Date__c</fullName>
    <formula>CASE(Tier__c, &quot;1&quot;, IF(NOT(ISBLANK(Last_Touch_Point__c)), Last_Touch_Point__c + 90 , DATEVALUE (CreatedDate) + 90),
&quot;2&quot;, IF( NOT(ISBLANK(Last_Touch_Point__c)), Last_Touch_Point__c + 120 , DATEVALUE (CreatedDate) + 120),
&quot;3&quot;,IF( NOT(ISBLANK(Last_Touch_Point__c)), Last_Touch_Point__c + 180 , DATEVALUE (CreatedDate) + 180),Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Touchpoint_Date</label>
    <type>Date</type>
</CustomField>