force-app/main/default/objects/Contact/fields/Relationships_Classification__c.field-meta.xml
<CustomField>
    <fullName>Relationships_Classification__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Former Portfolio</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Banker</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Operating Executive</fullName>
            </value>
            <value>
                <fullName>Corporations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>