force-app/main/default/objects/Contact/fields/Touchpoint_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Overdue__c</fullName>
    <formula>Today() &gt;  Next_Touchpoint_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Touchpoint Overdue</label>
    <type>Checkbox</type>
</CustomField>